# Gridmind-microgrid-control

./: .gitignore  LICENSE  README.md  imp8_phase8.md  implementation_plan.md  pyproject.toml  render.yaml  requirements.txt
data/: control_overrides.json
data/lake/raw/gridmind.telemetry.battery/year=2026/month=07/day=13/hour=09/: telemetry_1783933200.parquet
data/lake/raw/gridmind.telemetry.battery/year=2026/month=07/day=13/hour=10/: telemetry_1783936800.parquet
data/lake/raw/gridmind.telemetry.battery/year=2026/month=07/day=13/hour=11/: telemetry_1783940400.parquet
data/lake/raw/gridmind.telemetry.battery/year=2026/month=07/day=13/hour=12/: telemetry_1783944000.parquet
data/lake/raw/gridmind.telemetry.battery/year=2026/month=07/day=13/hour=13/: telemetry_1783947600.parquet
data/lake/raw/gridmind.telemetry.battery/year=2026/month=07/day=13/hour=14/: telemetry_1783951200.parquet
docker/: docker-compose.yml
src/analytics/: __init__.py  features.py  forecaster.py  optimizer.py
src/api/: __init__.py  main.py
src/api/static/: app.js  index.css  index.html
src/ingestion/: __init__.py  producer.py
src/simulator/: battery.py  config.py  engine.py  market.py  meters.py  run_sim.py  solar.py  weather.py  wind.py
src/storage/: __init__.py  db_client.py  db_writer.py  schema.sql
src/streaming/: __init__.py  schemas.py  validator.py  writer.py
tests/: test_analytics.py  test_api.py  test_optimizer.py  test_simulator.py  test_storage.py  test_validation.py
(+199 files in other folders)
