[project]
name = "gridmind"
version = "0.1.0"
description = "Real-Time Intelligent Energy Data Platform"
authors = [
    { name = "Antigravity", email = "antigravity@google.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "pytest>=7.0.0",
    "kafka-python-ng>=2.2.2",
    "pyarrow>=12.0.0",
    "psycopg2-binary>=2.9.0",
    "scikit-learn>=1.2.0",
    "pulp>=2.7.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "httpx>=0.23.0"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

